--- a/css/nav.css
+++ b/css/nav.css
@@ -6,7 +6,7 @@
   color: #fff;
   font-size: 3.5rem;
   line-height: 8rem;
-  padding-left: 10rem;
+  padding-left: 5rem;
   font-weight: bold;
 }
 .header nav,
